--- a/Game/startdialog.ui
+++ b/Game/startdialog.ui
@@ -142,8 +142,14 @@
      <height>28</height>
     </rect>
    </property>
+   <property name="minimum">
+    <number>10</number>
+   </property>
    <property name="maximum">
-    <number>199</number>
+    <number>200</number>
+   </property>
+   <property name="singleStep">
+    <number>5</number>
    </property>
   </widget>
   <widget class="QCheckBox" name="checkBoxUsesMax">
