--- a/Game/gamewindow.ui
+++ b/Game/gamewindow.ui
@@ -162,7 +162,7 @@
      </font>
     </property>
     <property name="text">
-     <string>rock</string>
+     <string>stone</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
