--- a/Game/gamewindow.ui
+++ b/Game/gamewindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Herwoodin valloitus</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGraphicsView" name="graphicsView">
@@ -113,7 +113,7 @@
      <string>resources</string>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber">
+   <widget class="QLCDNumber" name="lcdMoney">
     <property name="geometry">
      <rect>
       <x>680</x>
@@ -127,7 +127,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>110</y>
+      <y>230</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -151,7 +151,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>140</y>
+      <y>200</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -193,7 +193,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>200</y>
+      <y>140</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -210,7 +210,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_2">
+   <widget class="QLCDNumber" name="lcdFood">
     <property name="geometry">
      <rect>
       <x>680</x>
@@ -220,7 +220,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_3">
+   <widget class="QLCDNumber" name="lcdWood">
     <property name="geometry">
      <rect>
       <x>680</x>
@@ -230,7 +230,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_4">
+   <widget class="QLCDNumber" name="lcdStone">
     <property name="geometry">
      <rect>
       <x>680</x>
@@ -244,7 +244,7 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>220</y>
+      <y>100</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -258,10 +258,10 @@
      <string>money</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber_5">
+   <widget class="QLCDNumber" name="lcdOre">
     <property name="geometry">
      <rect>
       <x>680</x>
@@ -290,7 +290,7 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>650</x>
       <y>290</y>
       <width>63</width>
       <height>20</height>
@@ -298,6 +298,9 @@
     </property>
     <property name="text">
      <string>workers</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="Line" name="line_3">
@@ -319,14 +322,111 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>642</x>
       <y>420</y>
-      <width>63</width>
+      <width>71</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>buildings</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonEndTurn">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>530</y>
+      <width>211</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>end turn</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ButtonHQ">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>440</y>
+      <width>84</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>HQ</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonMine">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>440</y>
+      <width>84</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Mine</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonCottage">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>480</y>
+      <width>84</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cottage</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonFishingHut">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>480</y>
+      <width>84</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Fishing hut</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_4">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>510</y>
+      <width>231</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="lineWidth">
+     <number>5</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonTrain">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>377</y>
+      <width>84</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Train</string>
     </property>
    </widget>
   </widget>
