--- a/Game/gamewindow.ui
+++ b/Game/gamewindow.ui
@@ -33,8 +33,8 @@
    <widget class="QLabel" name="roundLabel">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>10</y>
+      <x>690</x>
+      <y>0</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -52,7 +52,7 @@
     <property name="geometry">
      <rect>
       <x>590</x>
-      <y>40</y>
+      <y>30</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>640</x>
-      <y>40</y>
+      <y>30</y>
       <width>151</width>
       <height>20</height>
      </rect>
@@ -87,8 +87,8 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>60</y>
+      <x>570</x>
+      <y>50</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -103,8 +103,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>80</y>
+      <x>650</x>
+      <y>60</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -116,8 +116,8 @@
    <widget class="QLCDNumber" name="lcdMoney">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>110</y>
+      <x>690</x>
+      <y>80</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -126,8 +126,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>230</y>
+      <x>620</x>
+      <y>200</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -150,8 +150,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>200</y>
+      <x>620</x>
+      <y>170</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -171,8 +171,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>170</y>
+      <x>620</x>
+      <y>140</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -192,8 +192,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>140</y>
+      <x>620</x>
+      <y>110</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -213,8 +213,8 @@
    <widget class="QLCDNumber" name="lcdFood">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>140</y>
+      <x>690</x>
+      <y>110</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -223,8 +223,8 @@
    <widget class="QLCDNumber" name="lcdWood">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>170</y>
+      <x>690</x>
+      <y>140</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -233,8 +233,8 @@
    <widget class="QLCDNumber" name="lcdStone">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>200</y>
+      <x>690</x>
+      <y>170</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -243,8 +243,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>100</y>
+      <x>600</x>
+      <y>80</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -258,14 +258,14 @@
      <string>money</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdOre">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>230</y>
+      <x>690</x>
+      <y>200</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -274,8 +274,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>270</y>
+      <x>570</x>
+      <y>220</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -291,7 +291,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>290</y>
+      <y>240</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -307,7 +307,7 @@
     <property name="geometry">
      <rect>
       <x>560</x>
-      <y>400</y>
+      <y>340</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -322,8 +322,8 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>642</x>
-      <y>420</y>
+      <x>640</x>
+      <y>360</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -351,9 +351,9 @@
    <widget class="QPushButton" name="ButtonHQ">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>440</y>
-      <width>84</width>
+      <x>570</x>
+      <y>380</y>
+      <width>81</width>
       <height>28</height>
      </rect>
     </property>
@@ -364,9 +364,9 @@
    <widget class="QPushButton" name="buttonMine">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>440</y>
-      <width>84</width>
+      <x>680</x>
+      <y>380</y>
+      <width>81</width>
       <height>28</height>
      </rect>
     </property>
@@ -377,9 +377,9 @@
    <widget class="QPushButton" name="buttonCottage">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>480</y>
-      <width>84</width>
+      <x>570</x>
+      <y>420</y>
+      <width>81</width>
       <height>28</height>
      </rect>
     </property>
@@ -390,9 +390,9 @@
    <widget class="QPushButton" name="buttonFishingHut">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>480</y>
-      <width>84</width>
+      <x>680</x>
+      <y>420</y>
+      <width>81</width>
       <height>28</height>
      </rect>
     </property>
@@ -404,7 +404,7 @@
     <property name="geometry">
      <rect>
       <x>560</x>
-      <y>510</y>
+      <y>480</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -419,9 +419,9 @@
    <widget class="QPushButton" name="buttonTrain">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>377</y>
-      <width>84</width>
+      <x>600</x>
+      <y>320</y>
+      <width>151</width>
       <height>21</height>
      </rect>
     </property>
@@ -432,8 +432,8 @@
    <widget class="QLabel" name="roundLabel_2">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>10</y>
+      <x>620</x>
+      <y>0</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -445,6 +445,36 @@
     </property>
     <property name="text">
      <string>Round: </string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonBuild">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>450</y>
+      <width>131</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Build</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>500</y>
+      <width>221</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Cantarell'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;select tile for your headquarter&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
   </widget>
