--- a/Game/gamewindow.ui
+++ b/Game/gamewindow.ui
@@ -477,6 +477,31 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;select tile for your headquarter&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>280</y>
+      <width>79</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Cottage</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Fishinghut</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Mine</string>
+     </property>
+    </item>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
