--- a/Game/gamewindow.ui
+++ b/Game/gamewindow.ui
@@ -87,7 +87,7 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>560</x>
       <y>50</y>
       <width>231</width>
       <height>20</height>
@@ -274,7 +274,7 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>560</x>
       <y>220</y>
       <width>231</width>
       <height>20</height>
@@ -290,8 +290,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>240</y>
+      <x>640</x>
+      <y>230</y>
       <width>63</width>
       <height>20</height>
      </rect>
@@ -348,58 +348,6 @@
      <string>end turn</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="ButtonHQ">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>380</y>
-      <width>81</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>HQ</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="buttonMine">
-    <property name="geometry">
-     <rect>
-      <x>680</x>
-      <y>380</y>
-      <width>81</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Mine</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="buttonCottage">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>420</y>
-      <width>81</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Cottage</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="buttonFishingHut">
-    <property name="geometry">
-     <rect>
-      <x>680</x>
-      <y>420</y>
-      <width>81</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Fishing hut</string>
-    </property>
-   </widget>
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
@@ -419,9 +367,9 @@
    <widget class="QPushButton" name="buttonTrain">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>570</x>
       <y>320</y>
-      <width>151</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -450,9 +398,9 @@
    <widget class="QPushButton" name="buttonBuild">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>450</y>
-      <width>131</width>
+      <x>570</x>
+      <y>420</y>
+      <width>71</width>
       <height>28</height>
      </rect>
     </property>
@@ -480,8 +428,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>280</y>
+      <x>570</x>
+      <y>380</y>
       <width>79</width>
       <height>28</height>
      </rect>
@@ -501,6 +449,84 @@ p, li { white-space: pre-wrap; }
       <string>Mine</string>
      </property>
     </item>
+   </widget>
+   <widget class="QPushButton" name="buttonWorker1">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>250</y>
+      <width>46</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonAssign">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>320</y>
+      <width>91</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>assign</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonWorker2">
+    <property name="geometry">
+     <rect>
+      <x>606</x>
+      <y>250</y>
+      <width>46</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonWorker3">
+    <property name="geometry">
+     <rect>
+      <x>652</x>
+      <y>250</y>
+      <width>46</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonWorker4">
+    <property name="geometry">
+     <rect>
+      <x>696</x>
+      <y>250</y>
+      <width>46</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonWorker5">
+    <property name="geometry">
+     <rect>
+      <x>742</x>
+      <y>250</y>
+      <width>46</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
