--- a/Game/traindialog.ui
+++ b/Game/traindialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>296</width>
-    <height>161</height>
+    <width>307</width>
+    <height>182</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>-50</x>
-     <y>120</y>
+     <x>-40</x>
+     <y>140</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -29,56 +29,65 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="buttonMiner">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>84</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Miner</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="buttonFisher">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>10</y>
-     <width>84</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Fisher</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="buttonTimberjack">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>10</y>
-     <width>84</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>TimberJack</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="buttonTrain">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>120</y>
+     <y>140</y>
      <width>91</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Train</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonMiner">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>91</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Miner
+money: 200
+food: 50
+duration: 2</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonFisher">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>20</y>
+     <width>91</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Fisher
+money: 150
+food: 50
+duration: 1</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonTimberJack">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>20</y>
+     <width>91</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Timber Jack
+money: 100
+food: 50
+duration: 2</string>
    </property>
   </widget>
  </widget>
